@@ -93,7 +93,8 @@ set TZData(:Asia/Gaza) {
     {1238104800 10800 1 EEST}
     {1252018800 7200 0 EET}
     {1269640860 10800 1 EEST}
-    {1283468400 7200 0 EET}
+    {1281474000 7200 0 EET}
+    {1283472000 7200 0 EET}
     {1301090460 10800 1 EEST}
     {1314918000 7200 0 EET}
     {1333144860 10800 1 EEST}
